# modax_detection

./: .gitignore  CochlearMesh.py  ModiolarAxis.py  README.md  modax_funs.py  modax_settings.ini  pyproject.toml
utils/: Annotation3D.py  NumpyEncoder.py  io_utils.py  matlab_utils.py  modax_utils.py  plot_utils.py  pydicom_utils.py  vtk_utils.py
