[project]
name = "modax-detection"
version = "0.1.0"
description = "Cochlear modiolar axis detection"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "pydicom>=3.0.1",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
    "trimesh>=4.11.1",
]
